<resources>
    <string name="app_name">JSON_Android</string>

    <string name="newBoolBtn">Add random boolean in jsonObject</string>
    <string name="lastBoolBtn">Get the last boolean</string>

    <string name="newDoubleBtn">Add random double in jsonObject</string>
    <string name="lastDoubleBtn">Get the last double</string>

    <string name="result">Результат: </string>
    <string name="clear_jsonobject_btn">Clear JSONObject</string>
    <string name="show_jsonobject_btn">Show the JSONObject</string>

    <string name="getItemBtn">Get the JSON item</string>
    <string name="removeItemBtn">Remove the JSON item</string>

    <string name="jsonobject_name">JSONObject name</string>
    <string name="addItemBtn">Add new item in JSONObject</string>

    <!--New item name [^A-Za-z0-9]-->
    <string name="new_item_name">New item name [^A&#8211;Za&#8211;z0&#8211;9]</string>

    <string name="new_item_value">New item value* (bool, double)</string>
    <string name="add_random_jsonarray_btn">Add random JSONArray</string>

</resources>