<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/newBoolBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onNewBoolBtnClick"
            android:text="@string/newBoolBtn" />
        <Button
            android:id="@+id/newDoubleBtn"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/newDoubleBtn"
            android:onClick="onNewDoubleBtnClick" />
    </LinearLayout>

    <TextView
        android:id="@+id/jsonobject_key_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jsonobject_key" />
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!--todo сделать поле и кнопку шириной по 50%-->
        <EditText
            android:id="@+id/jsonobject_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text" />
        <!--android:text="@string/jsonobject_key"-->
        <Button
            android:id="@+id/getItemBtn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="@string/getItemBtn"
            android:onClick="onGetItemBtnClick" />
    </LinearLayout>

    <Button
        android:id="@+id/clear_jsonobject_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_jsonobject_btn"
        android:onClick="onClearJSONBtnClick" />
    <Button
        android:id="@+id/show_jsonobject_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_jsonobject_btn"
        android:onClick="onShowJSONObjectBtnClick" />

    <TextView
        android:id="@+id/resultWordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result" />
    <TextView
        android:id="@+id/resultStringTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />
</LinearLayout>