<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/resultWordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result" />
        <TextView
            android:id="@+id/resultStringTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="asdasdad" />
    </LinearLayout>



    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/newBoolBtn"
            android:onClick="onNewBoolBtnClick"
            android:layout_width="match_parent" />
        <Button
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lastBoolBtn"
            android:onClick="onLastBoolBtnClick"
            android:layout_width="match_parent" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/newDoubleBtn"
            android:onClick="onNewDoubleBtnClick"
            android:layout_width="match_parent" />
        <Button
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/lastDoubleBtn"
            android:onClick="onLastDoubleBtnClick"
            android:layout_width="match_parent" />
    </LinearLayout>
</LinearLayout>